--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,8 @@ services:
     build: ./exchange_service
     user: root
     command: >
-      sh -c "python manage.py migrate &&
-             service cron start && 
-             python manage.py crontab add &&
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     env_file:
       - .env
