--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,7 @@ services:
   api_gateway:
     build: ./api_gateway
     command: >
-      sh -c "python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py runserver 0.0.0.0:8000"
     env_file:
       - .env
     environment:
@@ -16,7 +15,8 @@ services:
   auth_service:
     build: ./auth_service
     command: >
-      sh -c "python manage.py migrate &&
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     env_file:
       - .env
@@ -44,7 +44,8 @@ services:
   task_handler_service:
     build: ./task_handler_service
     command: >
-      sh -c "python manage.py migrate &&
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     env_file:
       - .env
@@ -57,7 +58,8 @@ services:
   predict_service:
     build: ./predict_service
     command: >
-      sh -c "python manage.py migrate &&
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     env_file:
       - .env
