--- a/predict_service/Dockerfile
+++ b/predict_service/Dockerfile
@@ -14,6 +14,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
+# Create a virtual environment and activate it
+RUN python3 -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+
 # Install pip requirements
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
