--- a/task_handler_service/requirements.txt
+++ b/task_handler_service/requirements.txt
@@ -4,3 +4,8 @@ psycopg2-binary==2.8.6
 python-dotenv==0.21.1
 cryptography==39.0.1
 requests
+django-celery-beat
+django-apscheduler
+django_celery_results
+redis
+sqlalchemy
