--- a/notify_service/requirements.txt
+++ b/notify_service/requirements.txt
@@ -1,4 +1,7 @@
-Django
-djangorestframework
+Django==4.1.5
+djangorestframework==3.14.0
+psycopg2-binary==2.8.6
+python-dotenv==0.21.1
+cryptography==39.0.1
 requests
-dotenvpython-dotenv==0.21.1
+python-dotenv==0.21.1
