--- a/predict_service/requirements.txt
+++ b/predict_service/requirements.txt
@@ -1,11 +1,16 @@
-Django==4.1.5
-djangorestframework==3.14.0
-psycopg2-binary==2.8.6
-python-dotenv==0.21.1
-cryptography==39.0.1
+Django
+djangorestframework
+psycopg2-binary
+python-dotenv
+cryptography
+
+# predict lib
 numpy
 pandas
 requests
 scipy
 peakdetect
 TA-Lib
+tensorflow
+scikit-learn
+statsmodels
